@@ -1,5 +1,12 @@
 2006-09-16  Edward Hervey  <edward@fluendo.com>
 
+	* tests/check/common.h:
+	Added convenience function to create a int/float audiotest gnlsource.
+	* tests/check/complex.c: (GST_START_TEST), (gnonlin_suite):
+	Added test_renegotiation to test re-negotiation error seen in #352827
+
+2006-09-16  Edward Hervey  <edward@fluendo.com>
+
 	* tests/check/.cvsignore:
 	add gnloperation
 
